--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -9,10 +9,6 @@
     {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" style="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <script type="text/javascript">
@@ -41,9 +37,12 @@
             }
     }
 
-
     function initMap() {
         var prev_iw = false;
+        var loc;
+        var pos;
+        var from = document.getElementById("from");
+        var to = document.getElementById("to");
         radius = 20, zoom = 14;
 
         var location = {lat: 53.3498, lng: -6.2603};
@@ -52,13 +51,50 @@
         center : location
         });
 
-        <!--add markers-->
+
+<!--adding you are here info window - reference: google documentation-->
+        loc = new google.maps.InfoWindow;
+
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            loc.setPosition(pos);
+            loc.setContent('You are here!');
+            loc.open(map);
+            map.setCenter(pos);
+            addMyLoc(pos);
+          }, function() {
+            handleLocationError(true, loc, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, loc, map.getCenter());
+        }
+
+<!--adding user location to starting point drop down-->
+        function addMyLoc(position) {
+            from.innerHTML += '<option value="' + position.lat + ',' + position.lng + '">My location</option>';
+        }
+
+<!--error handling function for geolocation-->
+        function handleLocationError(browserHasGeolocation, loc, pos) {
+            loc.setPosition(pos);
+            loc.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+            loc.open(map);
+        }
+
+<!--add station markers-->
 
         for (let i of stands) {
 
             addMarkers({
             coords:{lat:i.lat,lng:i.lng},
-            content:'<h4>'+i.address+'</h4><h6>Station Number: '+i.number+'</h6><h6>Status: '+i.status+'</h6><h6>Available Stands: '+i.free_stands+'</h6><h6>Available Bikes: '+i.free_bikes+'</h6><p>'+i.temp+'&#176; but feels like '+i.feels_like+'&#176;</p><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'">',
+            content:'<div id="iw"><h4>#'+i.number+': '+i.address+'</h4><h6>Status: '+i.status+'</h6><h6>Available Stands: '+i.free_stands+'</h6><h6>Available Bikes: '+i.free_bikes+'</h6><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'"><p>'+i.temp+'&#176; but feels like '+i.feels_like+'&#176;</p><button id="infobutton" onclick="buildInfoURL('+i.number+')">Info</button></div>',
             pin: i.free_bikes
             });
 
@@ -70,14 +106,14 @@
                 map : map
             });
 
-
-            <!--add bike info windows-->
+<!--add station info windows-->
 
             if(prop.content){
                 var infoWindow = new google.maps.InfoWindow({
                 content : prop.content
                 });
 
+<!--colour changing pins-->
             if (prop.pin >= 13){
                     marker.setIcon('/static/pin_green.png')
                 } else if (prop.pin < 13 && prop.pin > 5) {
@@ -88,6 +124,7 @@
 
             }
 
+<!--toggling for station info windows-->
             google.maps.event.addListener(marker, 'click', function() {
                 if (prev_iw) {
                     prev_iw.close();
@@ -121,130 +158,67 @@
         url += "&fromlat="+origin[0]+"&fromlong="+origin[1];
         window.location = url;
     }
+
+    function buildInfoURL(station){
+        var link = "/info/";
+        link += station;
+        window.location = link;
+    }
+
 </script>
 
 <body onload="load()">
-
-    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: rgba(42, 42, 46, 1)">
-        <a class="navbar-brand" href="#">
-            <h1><strong>dublinbikes</strong></h1>
-        </a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse collapse" id="navbarColor03" style="">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index">
-                        <h5>Map</h5>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="info">
-                        <h5>Info</h5>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="row">
-            <main class="col-12 maindiv" role="main" style="background-color: #ff1111;">
-                <div class="row">
-                    <div class="contianer w-100">
-                        <div class="row">
-                            <div class="col-7 col-md-8 col-xl-9" style="background-color: rgba(237, 237, 238, 1)">
-                                <div class="container w-100" id="map">
-                                    <h1>Map here</h1>
-                                </div>
-                            </div>
-                            <div class="col-5 col-md-4 col-xl-3" style="background-color: rgba(237, 237, 238, 1)">
-                                <div class="container w-100">
-
-                                    <!-- clock widget goes here -->
-                                    <div class="row" id="clockWidget">
-                                        <div class="container w-100" style="background: rgba(255,255,255,0.3);" >
-                                            <script src="/static/clockWidget.js" ></script>
-                                            <div class="row">
-                                                <span class="display-4">
-                                                    <small id="clock-date"></small>
-                                                </span>
-                                            </div>
-
-                                            <div class="row">
-                                                <span class="display-1" id="clock-time"></span>
-                                            </div>
-
-                                            <div class="row">
-                                                <img id="clock-weatherImg">
-                                            </div>
-
-                                            <div class="row">
-                                                <span class="display-3" id="clock-temp"></span>
-                                            </div>
-
-                                            <div class="row">
-                                                <span class="display-4">
-                                                    <small id="clock-weatherDescription"></small>
-                                                </span>
-                                            </div>
-
-                                            <script>
-                                                // directory where weather gifs are stored
-                                                var gifsPath = "{{ url_for('static', filename='weather_gifs/') }}";
-                                                //call updateClock() every 1000 milliseconds
-                                                updateClock();
-                                                setInterval(updateClock, 1000);
-
-                                                //call updateWeather() every 30000 milliseconds
-                                                updateWeather(gifsPath);
-                                                setInterval(updateWeather(gifsPath), 30000);
-                                            </script>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-2"><strong>From: </strong></div>
-                                        <div class="col-5"><select id="from"></select></div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-2"><strong>To: </strong></div>
-                                        <div class="col-5"><select id="to"></select></div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <button type="button" class="btn btn-primary" onclick="buildURL()" style="background-color: rgba(42, 42, 46, 1); border: none">Submit</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </main>
+    <div class="header">
+        <a href="/index" class="logo">dublinbikes</a>
+        <div class="header-right">
+            <a href="/index">Map</a>
+            <a href="/info">Info</a>
         </div>
     </div>
 
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" id="bottomnav" style="background-color: rgba(42, 42, 46, 1)">
-        <div class="container">
-            <div class="row w-100">
-                <div class="col">
+    <div id="container">
+
+        <div id="map">Map goes here...</div>
+        <div id="clockWidget">
+            <div id="w-container">
+                <script src="/static/clockWidget.js"></script>
+                <div id="welcome">
+                    <h3>Welcome to Dublin Bikes!</h3>
+                    <img id="clock-weatherImg">
+                    <div id="clock-temp"></div>
+                    <div id="clock-weatherDescription"></div>
                 </div>
-                <div class="col">
-                    <p class="text-center text-muted"><strong style="color: rgba(237, 237, 238, 1)">Team 14</strong></p>
+                <div id="td">
+                    <div id="clock-time"></div>
+                    <div id="clock-date"></div>
                 </div>
-                <div class="col"></div>
+
+                <script>
+                    // directory where weather gifs are stored
+                    var gifsPath = "{{ url_for('static', filename='weather_gifs/') }}";
+                    //call updateClock() every 1000 milliseconds
+                    updateClock();
+                    setInterval(updateClock, 1000);
+
+                    //call updateWeather() every 30000 milliseconds
+                    updateWeather(gifsPath);
+                    setInterval(updateWeather(gifsPath), 30000);
+                </script>
+                <h3>Select your route:</h3>
+                <div id="tofrom">
+                    <select id="from">
+                        <option>Choose starting point</option>
+                    </select>
+                    <select id="to">
+                        <option>Choose destination</option>
+                    </select>
+                </div>
+                <button type="button" onclick="buildURL()">Lets go!</button>
             </div>
+
+
         </div>
-    </nav>
-    <script type="text/javascript">
-
-
-    </script>
+    </div>
     <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5ydZwuT-hJt9fmBA5_sHnIWeE3JgvjCY&callback=initMap"  async defer ></script>
 </body>
 
