values added to default option for error handling

--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -212,10 +212,10 @@
                 <h3>Select your route:</h3>
                 <div id="tofrom">
                     <select id="from">
-                        <option>Choose starting point</option>
+                        <option value="0">Choose starting point</option>
                     </select>
                     <select id="to">
-                        <option>Choose destination</option>
+                        <option value="0">Choose destination</option>
                     </select>
                 </div>
                 <button type="button" onclick="buildURL()">Lets go!</button>
