--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" style="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="icon" type="image/png" href="/static/pin_green.png">
 
 
     <!-- Placeholder styling for the sliding checkbox which switches between pre & post quarantine dataSets -->
