--- a/Flask app/static/main.css
+++ b/Flask app/static/main.css
@@ -351,5 +351,102 @@ span h2{
     margin-bottom: 0;
 }
 
+/* define behavior of custom select drop-down-menus */
+/* adapted from "https://www.w3schools.com/howto/howto_custom_select.asp" */
+.custom-select {
+    position: relative;
+    width: 60%;
+    display: inline-block;
+    margin: 1%;
+}
+
+.custom-select select {
+    display: none; /*hide original SELECT element: */
+}
+
+.select-selected {
+  background-color: rgba(42, 42, 46, 1);
+  border: none;
+  border-radius: 0px;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+.select-selected {
+    color: #ffffff;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: #eee;
+  color; black;
+  display: block;
+  text-decoration: none;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 500%;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: #111;
+  color: #ffffff;
+}
+
+/* end of code adapted from "https://www.w3schools.com/howto/howto_custom_select.asp" */
 
 
+/* define customised scrollbar styling for 'Webkit' browsers*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #c9c9c9;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
