update index.html - refactored call to external js file

--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <!-- load script for creating customised drop-down selection menus-->
-<script src="/static/dropDownWidget.js"></script>
+<script src="/static/customDropDown.js"></script>
 <script type="text/javascript">
     var stands = [];
     {% for i in statinfo %}
