Housekeeping update. Removing redundant files and adding additional comments

--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -58,7 +58,7 @@
                     bonus:"{{ i[11] }}"});
         {% endfor %}
     {% endif %}
-
+    // function to build the stations sidebar on the page
     function load(){
         main_div = document.getElementById("station_info");
         if (isEmpty){
