--- a/Flask app/templates/routeindex.html
+++ b/Flask app/templates/routeindex.html
@@ -29,22 +29,22 @@
         var org = {{coordinates.origin}};
         var dst = {{coordinates.dest}};
         {% for i in statinfo %}
-        stands.push({lat:{{ i[-2] }},
-                    lng:{{ i[-1] }},
-                    address:"{{ i[1] }}",
-                    number:{{ i[0] }},
-                    status:"{{ i[2] }}",
-                    free_bikes:{{ i[4] }},
-                    free_stands:{{ i[3] }},
-                    weather_img:"{{ i[6] }}",
-                    weather_type:"{{ i[5] }}",
-                    temp:{{ '%.2f'%(i[7] - 273.15) }},
-                    feels_like:{{ '%.2f'%(i[8] - 273.15) }},
-                    banking:"{{ i[10] }}",
-                    bonus:"{{ i[11] }}"});
+            stands.push({lat:{{ i[-2] }},
+            lng:{{ i[-1] }},
+            address:"{{ i[1] }}",
+            number:{{ i[0] }},
+            status:"{{ i[2] }}",
+            free_bikes:{{ i[4] }},
+            free_stands:{{ i[3] }},
+            weather_img:"{{ i[6] }}",
+            weather_type:"{{ i[5] }}",
+            temp:{{ '%.2f'%(i[7] - 273.15) }},
+            feels_like:{{ '%.2f'%(i[8] - 273.15) }},
+            banking:"{{ i[10] }}",
+            bonus:"{{ i[11] }}"});
         {% endfor %}
 
-
+        // function to initiate map
         function initMap() {
 
             var prev_iw = false;
@@ -59,7 +59,7 @@
                 center : location
             });
 
-<!--add markers-->
+//<!--add markers-->
             var lngT = 0.005;
             var latT = 0.003;
             for (let i of stands) {
@@ -101,9 +101,9 @@
                 map : map,
             });
 
-            <!--if clause to find availability to change icon colour here?-->
+            //<!--if clause to find availability to change icon colour here?-->
 
-            <!--add bike info windows-->
+            //<!--add bike info windows-->
 
             if(prop.content){
                 var infoWindow = new google.maps.InfoWindow({
